fix: notifications timing to be instantanuous